using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimatorStrings {
    internal static string isGrounded = "isGrounded";
    internal static string isRunning = "isRunning";
    internal static string isOnWall = "isOnWall";
    internal static string isAlive = "isAlive";
    internal static string isShielded = "isShielded";
    internal static string isDrawing = "isDrawing";
    internal static string isArmored = "isArmored";
    internal static string isReturningHome = "isReturningHome";
    internal static string playerDetected = "playerDetected";
    internal static string targetDetected = "targetDetected";
    internal static string arrowCaptured = "arrowCaptured";
    internal static string fastFall = "fastFall";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string hit = "hit";
    internal static string shield = "shield";
}
